# 88os

./: .clang_complete  .gdbinit  .travis.yml  88OS.code-workspace  CMakeLists.txt  Makefile  README.md  boot.asm  build.sh  debug.gdb  gui.h  idt.c  install.cpp  interrupt.c  interrupt.h  io.c  io.h  kernel.asm  kernel.c  kernel_main.c  keyboard.h  kmain.c  loader.asm  qemu.sh  quemu.bat  setup.bash  shell.c  timer.c
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cmake.yml
boot/: linker.ld  loader.asm
boot/grub/: grub.cfg
grub/: grub.cfg
include/: ata.h  common.h  display.h  driver.h  elf.h  idt.c  idt.h  interrupt.h  io.c  keyboard.h  newmultiboot.h  shell.h  string.h  timer.c  v86.s
include/runtime/: types.h
iso/boot/grub/: menu.lst
kernel/: kernel.c  kerneltesting.c  main.c  tty.c  tty.h
kernel/include/IO/: interrupts.h  pci.h  port.h
kernel/include/common/: types.h
kernel/src/: boot.s  kernel_entry.asm  kernel_main.cpp
lib/: string.c
src/: boot.s
